--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-# Core
-aiohttp>=3.9.0
-websockets>=12.0
-
-# Optional: OpenAI SDK for LLM
 openai>=1.0.0
-
-# Optional: For better logging
-colorlog>=6.8.0
+tiktoken>=0.5.0
+pyyaml>=6.0
+aiohttp>=3.9.0
+requests>=2.31.0
