Optimizations 16-20: safe_eval, tool permissions, CI/CD, parallel tools, FastAPI server

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,9 @@ dependencies = [
 
 [project.optional-dependencies]
 telegram = ["python-telegram-bot>=21.0"]
+api = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
 feishu = []
-all = ["python-telegram-bot>=21.0"]
+all = ["python-telegram-bot>=21.0", "fastapi>=0.100.0", "uvicorn>=0.20.0"]
 dev = ["pytest", "pytest-asyncio"]
 
 [project.scripts]
