--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,12 @@ dependencies = [
 
 [project.optional-dependencies]
 telegram = ["python-telegram-bot>=21.0"]
+discord = ["discord.py>=2.3.0"]
+slack = ["slack-bolt>=1.18.0"]
 api = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
 feishu = []
-all = ["python-telegram-bot>=21.0", "fastapi>=0.100.0", "uvicorn>=0.20.0"]
-dev = ["pytest", "pytest-asyncio"]
+all = ["python-telegram-bot>=21.0", "discord.py>=2.3.0", "slack-bolt>=1.18.0", "fastapi>=0.100.0", "uvicorn>=0.20.0"]
+dev = ["pytest", "pytest-asyncio", "pytest-cov"]
 
 [project.scripts]
 xiaoclaw = "xiaoclaw.cli:_cli_entry"
@@ -45,3 +47,8 @@ Repository = "https://github.com/upsightx/xiaoclaw"
 
 [tool.setuptools.packages.find]
 include = ["xiaoclaw*"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "strict"
+testpaths = ["tests"]
+
