--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          pip install pytest pytest-asyncio
+          pip install pytest pytest-asyncio pytest-cov
 
-      - name: Run unit tests
+      - name: Run unit tests (legacy)
         run: |
           python -c "
           from xiaoclaw.providers import test_providers; test_providers()
@@ -36,9 +36,35 @@ jobs:
           print('All unit tests passed!')
           "
 
+      - name: Run pytest with coverage
+        run: |
+          pytest tests/ -v --tb=short --cov=xiaoclaw --cov-report=term-missing --cov-report=xml -x
+
       - name: Import check
         run: |
           python -c "from xiaoclaw import XiaClaw, VERSION; print(f'xiaoclaw v{VERSION} imported OK')"
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Lint check
+        run: |
+          pip install -r requirements.txt
+          python -c "
+          import py_compile, pathlib
+          errors = []
+          for f in pathlib.Path('xiaoclaw').rglob('*.py'):
+              try: py_compile.compile(str(f), doraise=True)
+              except py_compile.PyCompileError as e: errors.append(str(e))
+          if errors:
+              for e in errors: print(e)
+              exit(1)
+          print('All files compile OK')
+          "
 
   docker:
     runs-on: ubuntu-latest
